--- a/PropWare/CMakeLists.txt
+++ b/PropWare/CMakeLists.txt
@@ -42,10 +42,11 @@ set(PROPWARE_SOURCES
     ../uart/uart
     ../utility)
 
+add_subdirectory(tests)
+
+include_directories(${PROJECT_SOURCE_DIR})
 add_subdirectory(cmm)
 add_subdirectory(lmm)
 add_subdirectory(xmmc)
 add_subdirectory(xmm-single)
 add_subdirectory(xmm-split)
-
-add_subdirectory(tests)
