--- a/PropWare/tests/CMakeLists.txt
+++ b/PropWare/tests/CMakeLists.txt
@@ -1,17 +1,10 @@
-###################################################################################
-### Template code. Do not modify                                                  #
-                                                                                  #
-cmake_minimum_required (VERSION 3.0.0)                                            #
-# Aside from cmake_minimum_required, this must be the first two lines of the file #
-file(TO_CMAKE_PATH $ENV{PROPWARE_PATH} PROPWARE_PATH)                             #
-include(${PROPWARE_PATH}/CMakePropellerHeader.cmake)                              #
-###################################################################################
+cmake_minimum_required (VERSION 3.0.0)
+
+find_package(PropWare REQUIRED)
 
 set(BOARD dna)
 set(MODEL cmm)
 set(COMMON_FLAGS "-Os")
-
-project(ProWare_Tests)
 
 create_executable(sample_test           sample_test)
 create_executable(pin_test              pin_test)
