--- a/Examples/PropWare_SimplexUART/CMakeLists.txt
+++ b/Examples/PropWare_SimplexUART/CMakeLists.txt
@@ -1,11 +1,5 @@
-###################################################################################
-### Template code. Do not modify                                                  #
-                                                                                  #
-cmake_minimum_required (VERSION 3.0.0)                                            #
-# Aside from cmake_minimum_required, this must be the first two lines of the file #
-file(TO_CMAKE_PATH $ENV{PROPWARE_PATH} PROPWARE_PATH)                             #
-include(${PROPWARE_PATH}/CMakePropellerHeader.cmake)                              #
-###################################################################################
+cmake_minimum_required (VERSION 3.0.0)
+find_package(PropWare REQUIRED)
 
 set(BOARD QUICKSTART)
 set(MODEL lmm)
