--- a/PropWare/xmm-split/CMakeLists.txt
+++ b/PropWare/xmm-split/CMakeLists.txt
@@ -1,14 +1,10 @@
 cmake_minimum_required (VERSION 3.0.0)
 
-if (NOT DEFINED PROPWARE_PATH)
-    file(TO_CMAKE_PATH $ENV{PROPWARE_PATH} PROPWARE_PATH)
-endif ()
-
 set(COMMON_FLAGS "-Os")
 set(C_FLAGS )
 set(CXX_FLAGS )
 set(MODEL xmm-split)
-include(${PROPWARE_PATH}/CMakePropellerSetFlags.cmake)
+set_compile_flags()
 
 add_library(PropWare_${MODEL} STATIC ${PROPWARE_SOURCES})
 install(TARGETS PropWare_${MODEL}
