Add stepper motor driver

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(PropWare_SeeedTFT)
 add_subdirectory(PropWare_SimplexUART)
 add_subdirectory(PropWare_Simple_Hybrid)
 add_subdirectory(PropWare_SPI)
+add_subdirectory(PropWare_Stepper)
 add_subdirectory(PropWare_SynchronousPrinter)
 add_subdirectory(PropWare_Utility)
 #add_subdirectory(Simple_AdcAcPropAb)
