Add WS2812 driver and example; Closes #35

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(PropWare_SPI)
 add_subdirectory(PropWare_Stepper)
 add_subdirectory(PropWare_SynchronousPrinter)
 add_subdirectory(PropWare_Utility)
+add_subdirectory(PropWare_WS2812)
 #add_subdirectory(Simple_AdcAcPropAb)
 add_subdirectory(Simple_FdSerial)
 add_subdirectory(Simple_I2C)
