--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,8 +1,9 @@
-add_subdirectory(PropWare_Blinky)
+add_subdirectory(Cogc)
 add_subdirectory(Concurrency)
 add_subdirectory(GettingStarted)
 add_subdirectory(Hello)
 add_subdirectory(Libpropeller_Pwm32)
+add_subdirectory(PropWare_Blinky)
 add_subdirectory(PropWare_DuplexUART)
 add_subdirectory(PropWare_FileReader)
 add_subdirectory(PropWare_HD44780)
