[Closes #18] Add I2C master object

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(PropWare_Blinky)
 add_subdirectory(PropWare_DuplexUART)
 add_subdirectory(PropWare_FileReader)
 add_subdirectory(PropWare_HD44780)
+add_subdirectory(PropWare_I2C)
 add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
 add_subdirectory(PropWare_MCP3000)
@@ -24,6 +25,5 @@ add_subdirectory(PropWare_Utility)
 add_subdirectory(PropWare_WS2812)
 #add_subdirectory(Simple_AdcAcPropAb)
 add_subdirectory(Simple_FdSerial)
-add_subdirectory(Simple_I2C)
 add_subdirectory(Simple_SimpleText)
 add_subdirectory(PropWare_StringBuilder)
