Add [undocumented] PCF8591 object

--- a/PropWare/CMakeLists.txt
+++ b/PropWare/CMakeLists.txt
@@ -18,6 +18,7 @@ set(PROPWARE_SOURCES
     ../max6675
     ../mcp3000
     ../motor/stepper
+    ../pcf8591
     ../pin
     ../port
     ../printcapable
