--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
 add_subdirectory(PropWare_MCP3000)
 add_subdirectory(PropWare_MultiCogBlinky)
+add_subdirectory(PropWare_PCF8591)
 add_subdirectory(PropWare_Queue)
 add_subdirectory(PropWare_Runnable)
 add_subdirectory(PropWare_Scanner)
