Begin SPI re-write to use inline assembly and FCache

--- a/PropWare/tests/CMakeLists.txt
+++ b/PropWare/tests/CMakeLists.txt
@@ -16,3 +16,4 @@ create_test(sd_test                 sd_test)
 create_test(stringbuilder_test      stringbuilder_test)
 create_test(queue_test              queue_test)
 create_test(utility_test            utility_test)
+create_test(spi_test                spi_test)
