--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(Libpropeller_Pwm32)
 add_subdirectory(PropWare_Blinky)
 add_subdirectory(PropWare_DuplexUART)
 add_subdirectory(PropWare_FileReader)
+add_subdirectory(PropWare_FileWriter)
 add_subdirectory(PropWare_HD44780)
 add_subdirectory(PropWare_I2C)
 add_subdirectory(PropWare_L3G)
