--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(PropWare_Scanner)
 add_subdirectory(PropWare_SimplexUART)
 add_subdirectory(PropWare_Simple_Hybrid)
 add_subdirectory(PropWare_SPI)
+add_subdirectory(PropWare_Spin2Dat)
 add_subdirectory(PropWare_Stepper)
 add_subdirectory(PropWare_SynchronousPrinter)
 add_subdirectory(PropWare_Utility)
