[Complete #52] Add WatchDog object

--- a/PropWare/CMakeLists.txt
+++ b/PropWare/CMakeLists.txt
@@ -41,6 +41,7 @@ set(PROPWARE_SOURCES
     ../uart/sharedsimplexuart
     ../uart/uart
     ../utility
+    ../watchdog
     ../ws2812)
 
 add_subdirectory(tests)
