--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -22,10 +22,11 @@ add_subdirectory(PropWare_Simple_Hybrid)
 add_subdirectory(PropWare_SPI)
 add_subdirectory(PropWare_Spin2Dat)
 add_subdirectory(PropWare_Stepper)
+add_subdirectory(PropWare_StringBuilder)
 add_subdirectory(PropWare_SynchronousPrinter)
 add_subdirectory(PropWare_Utility)
+add_subdirectory(PropWare_WatchDog)
 add_subdirectory(PropWare_WS2812)
 #add_subdirectory(Simple_AdcAcPropAb)
 add_subdirectory(Simple_FdSerial)
 add_subdirectory(Simple_SimpleText)
-add_subdirectory(PropWare_StringBuilder)
