Broken VGA files - working on cleaning Spin2Cpp output

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -41,6 +41,7 @@ add_subdirectory(PropWare_UARTTX)
 add_subdirectory(PropWare_Utility)
 add_subdirectory(PropWare_WatchDog)
 add_subdirectory(PropWare_WS2812)
+add_subdirectory(PropWare_VGAText)
 add_subdirectory(Simple_FdSerial)
 add_subdirectory(Simple_libadcACpropab)
 add_subdirectory(Simple_MeasureVolts)
