--- a/PropWare/xmm-single/CMakeLists.txt
+++ b/PropWare/xmm-single/CMakeLists.txt
@@ -6,4 +6,5 @@ set_compile_flags()
 add_library(PropWare_${MODEL} STATIC ${PROPWARE_SOURCES})
 install(TARGETS PropWare_${MODEL}
     DESTINATION PropWare/lib
-    COMPONENT propware)
+    COMPONENT propware
+    EXPORT PropWare-targets)
