--- a/libpropeller/source/cmm/CMakeLists.txt
+++ b/libpropeller/source/cmm/CMakeLists.txt
@@ -9,4 +9,5 @@ set_compile_flags()
 add_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
 install(TARGETS Libpropeller_${MODEL}
     DESTINATION PropWare/lib
-    COMPONENT propware)
+    COMPONENT propware
+    EXPORT PropWare-targets)
