--- a/libpropeller/source/xmm-single/CMakeLists.txt
+++ b/libpropeller/source/xmm-single/CMakeLists.txt
@@ -9,5 +9,6 @@ set_compile_flags()
 add_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
 install(TARGETS Libpropeller_${MODEL}
     DESTINATION PropWare/lib
-    COMPONENT propware)
+    COMPONENT propware
+    EXPORT PropWare-targets)
 
