--- a/Examples/PropWare_Queue/CMakeLists.txt
+++ b/Examples/PropWare_Queue/CMakeLists.txt
@@ -4,10 +4,7 @@ find_package(PropWare REQUIRED)
 set(BOARD QUICKSTART)
 set(MODEL lmm)
 set(COMMON_FLAGS "-Os")
-set(C_FLAGS )
-set(CXX_FLAGS )
 
 project(Queue_Demo)
 
-create_simple_executable(${PROJECT_NAME}
-    ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
