--- a/Examples/PropWare_Simple_Hybrid/CMakeLists.txt
+++ b/Examples/PropWare_Simple_Hybrid/CMakeLists.txt
@@ -4,12 +4,9 @@ find_package(PropWare REQUIRED)
 set(BOARD QUICKSTART)
 set(MODEL lmm)
 set(COMMON_FLAGS "-Os")
-set(C_FLAGS )
-set(CXX_FLAGS )
 
 set(LINK_TINY ON)
 
 project(Hybrid_Demo)
 
-create_simple_executable(${PROJECT_NAME}
-    ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
