Stop using "${PROJECT_NAME}" for first source file; Move new project example to getting started

--- a/Examples/Cogc/CMakeLists.txt
+++ b/Examples/Cogc/CMakeLists.txt
@@ -6,5 +6,5 @@ set(MODEL cog)
 project(Cogc_Demo CXX COGCXX)
 
 create_simple_executable(${PROJECT_NAME}
-    Cogc_Demo
+    Cogc_Demo.cpp
     blinky.cogcpp)
