--- a/Examples/PropWare_FileWriter/CMakeLists.txt
+++ b/Examples/PropWare_FileWriter/CMakeLists.txt
@@ -6,4 +6,4 @@ set(MODEL cmm)
 
 project(FileWriter_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} FileWriter_Demo.cpp)
