--- a/Examples/PropWare_MAX6675/CMakeLists.txt
+++ b/Examples/PropWare_MAX6675/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(MAX6675_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} MAX6675_Demo.cpp)
