--- a/Examples/PropWare_PCF8591/CMakeLists.txt
+++ b/Examples/PropWare_PCF8591/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(PCF8591_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} PCF8591_Demo.cpp)
