--- a/Examples/PropWare_SynchronousPrinter/CMakeLists.txt
+++ b/Examples/PropWare_SynchronousPrinter/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(SynchronousPrinter_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} SynchronousPrinter_Demo.cpp)
