--- a/Examples/GettingStarted/CMakeLists.txt
+++ b/Examples/GettingStarted/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(GettingStarted)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} GettingStarted.cpp)
