--- a/Examples/Libpropeller_Pwm32/CMakeLists.txt
+++ b/Examples/Libpropeller_Pwm32/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(PWM32_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} PWM32_Demo.cpp)
