--- a/Examples/PropWare_DuplexUART/CMakeLists.txt
+++ b/Examples/PropWare_DuplexUART/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(DuplexUART_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} DuplexUART_Demo.cpp)
