--- a/Examples/PropWare_MCP3000/CMakeLists.txt
+++ b/Examples/PropWare_MCP3000/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(MCP3000_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} MCP3000_Demo.cpp)
