--- a/Examples/PropWare_Queue/CMakeLists.txt
+++ b/Examples/PropWare_Queue/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(Queue_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} Queue_Demo.cpp)
