--- a/Examples/PropWare_Scanner/CMakeLists.txt
+++ b/Examples/PropWare_Scanner/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(Scanner_Demo C CXX ASM)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} Scanner_Demo.cpp)
