--- a/Examples/PropWare_Simple_Hybrid/CMakeLists.txt
+++ b/Examples/PropWare_Simple_Hybrid/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(Hybrid_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} Hybrid_Demo.cpp)
