--- a/Examples/PropWare_SimplexUART/CMakeLists.txt
+++ b/Examples/PropWare_SimplexUART/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(SimplexUART_Demo C CXX ASM)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} SimplexUART_Demo.cpp)
