--- a/Examples/PropWare_Spin2Dat/CMakeLists.txt
+++ b/Examples/PropWare_Spin2Dat/CMakeLists.txt
@@ -4,5 +4,5 @@ find_package(PropWare 2.0 REQUIRED)
 project(Spin2Dat_Demo CXX SPIN2DAT)
 
 create_simple_executable(${PROJECT_NAME}
-    Spin2Dat_Demo
+    Spin2Dat_Demo.cpp
     pst.spin)
