--- a/Examples/PropWare_Stepper/CMakeLists.txt
+++ b/Examples/PropWare_Stepper/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(Stepper_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} Stepper_Demo.cpp)
