--- a/Examples/PropWare_WatchDog/CMakeLists.txt
+++ b/Examples/PropWare_WatchDog/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(WatchDog_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} WatchDog_Demo.cpp)
