--- a/Examples/Simple_FdSerial/CMakeLists.txt
+++ b/Examples/Simple_FdSerial/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(FdSerial_Demo C CXX SPIN2DAT)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME} pst.spin)
+create_simple_executable(${PROJECT_NAME} FdSerial_Demo.c pst.spin)
