--- a/Examples/Simple_SimpleText/CMakeLists.txt
+++ b/Examples/Simple_SimpleText/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(SimpleText_Demo)
 
-create_simple_executable(${PROJECT_NAME} ${PROJECT_NAME})
+create_simple_executable(${PROJECT_NAME} SimpleText_Demo.c)
