Move Doxygen's README to a new file and use a basic README for GitHub and developer.parallax.com

--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
 image: docs/images/PropWare_Logo_64.png
-type: tools libraries
+type: tools|libraries
 links:
   Documentation: http://david.zemon.name/PropWare/
   Forum Thread: http://forums.parallax.com/showthread.php/157005-FYI-PropWare-Complete-build-system-and-library-for-PropGCC
