--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory(PropWare_SynchronousPrinter)
 add_subdirectory(PropWare_Utility)
 add_subdirectory(PropWare_WatchDog)
 add_subdirectory(PropWare_WS2812)
-#add_subdirectory(Simple_AdcAcPropAb)
 add_subdirectory(Simple_FdSerial)
+add_subdirectory(Simple_libadcACpropab)
+add_subdirectory(Simple_MeasureVolts)
 add_subdirectory(Simple_SimpleText)
