--- a/simple/cog/CMakeLists.txt
+++ b/simple/cog/CMakeLists.txt
@@ -4,6 +4,7 @@ set(MODEL cog)
 set_compile_flags()
 
 add_library(Simple_${MODEL} STATIC ${SIMPLE_OBJECTS})
+set_linker(Simple_${MODEL})
 install(TARGETS Simple_${MODEL}
     DESTINATION PropWare/lib
     COMPONENT propware
