--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,16 @@ cmake_minimum_required (VERSION 3.0.0)
 
 set(PROPWARE_MAIN_PACKAGE TRUE)
 
+# Get the PropWare version
 file(READ ${CMAKE_CURRENT_LIST_DIR}/version.txt VERSION)
 string(STRIP ${VERSION} VERSION)
 
+# Load special modules
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/CMakeModules)
 find_package(PropWare ${VERSION} REQUIRED)
+
+# Allow using `if (VAR IN_LIST MY_LIST)`
+cmake_policy(SET CMP0057 NEW)
 
 # Set the project, version number and all languages used
 project(PropWare
