--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,7 @@ project(PropWare
     VERSION ${VERSION}
     LANGUAGES C CXX ASM COGC COGCXX ECOGC ECOGCXX DAT SPIN2DAT)
 
-add_subdirectory(simple)
-add_subdirectory(external_libs)
+add_subdirectory(external_libs) # Make sure this is first since it modifies the include directories needed later
 add_subdirectory(PropWare)
 add_subdirectory(Examples)
 add_subdirectory(test)
