--- a/external_libs/cmm/CMakeLists.txt
+++ b/external_libs/cmm/CMakeLists.txt
@@ -4,8 +4,10 @@ set(MODEL cmm)
 set_compile_flags()
 
 add_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
+add_library(Simple_${MODEL} STATIC ${SIMPLE_OBJECTS})
 set_linker(Libpropeller_${MODEL})
-install(TARGETS Libpropeller_${MODEL}
+set_linker(Simple_${MODEL})
+install(TARGETS Libpropeller_${MODEL} Simple_${MODEL}
     DESTINATION PropWare/lib
     COMPONENT propware
     EXPORT PropWare-targets)
