[#66] Basic integration tests complete via demo
* Supports `PropWare::PrintCapable`
* Supports `PropWare::ScanCapable`
* Supports turning off the autoincrement for manually moving the read/write pointer

--- a/PropWare/CMakeLists.txt
+++ b/PropWare/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(PROPWARE_SOURCES
     ${CMAKE_CURRENT_LIST_DIR}/c++allocate.h
     ${CMAKE_CURRENT_LIST_DIR}/comparator
+    ${CMAKE_CURRENT_LIST_DIR}/eeprom
     ${CMAKE_CURRENT_LIST_DIR}/filesystem/blockstorage
     ${CMAKE_CURRENT_LIST_DIR}/filesystem/fat/fatfile
     ${CMAKE_CURRENT_LIST_DIR}/filesystem/fat/fatfilereader
