--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(Hello)
 add_subdirectory(Libpropeller_Pwm32)
 add_subdirectory(PropWare_Blinky)
 add_subdirectory(PropWare_DuplexUART)
+add_subdirectory(PropWare_Eeprom)
 add_subdirectory(PropWare_FileReader)
 add_subdirectory(PropWare_FileWriter)
 add_subdirectory(PropWare_HD44780)
