[#67] wavplayer.c now compiles with speed optimization

--- a/external_libs/cmm/CMakeLists.txt
+++ b/external_libs/cmm/CMakeLists.txt
@@ -1,5 +1,9 @@
 set(MODEL cmm)
 
+# WAV player need to be optimized for speed, not size
+set_source_files_properties("${PROJECT_SOURCE_DIR}/propsideworkspace/Learn/Simple Libraries/Audio/libwavplayer/wavplayer.c"
+    PROPERTIES COMPILE_FLAGS "-O3")
+
 create_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
 create_library(Simple_${MODEL} STATIC ${SIMPLE_OBJECTS})
 set_target_properties(Libpropeller_${MODEL} PROPERTIES OUTPUT_NAME Libpropeller)
