[Fixes #64] Add `create_library` macro to CMake configs

--- a/external_libs/xmmc/CMakeLists.txt
+++ b/external_libs/xmmc/CMakeLists.txt
@@ -1,10 +1,7 @@
 set(MODEL xmmc)
-set_compile_flags()
 
-add_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
-add_library(Simple_${MODEL} STATIC ${SIMPLE_OBJECTS})
-set_linker(Libpropeller_${MODEL})
-set_linker(Simple_${MODEL})
+create_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
+create_library(Simple_${MODEL} STATIC ${SIMPLE_OBJECTS})
 set_target_properties(Libpropeller_${MODEL} PROPERTIES OUTPUT_NAME Libpropeller)
 set_target_properties(Simple_${MODEL} PROPERTIES OUTPUT_NAME Simple)
 install(TARGETS Libpropeller_${MODEL} Simple_${MODEL}
