--- a/PropWare/models/xmm-single/CMakeLists.txt
+++ b/PropWare/models/xmm-single/CMakeLists.txt
@@ -1,7 +1,6 @@
 set(MODEL xmm-single)
-set_compile_flags()
 
-add_library(PropWare_${MODEL} STATIC ${PROPWARE_SOURCES})
+create_library(PropWare_${MODEL} STATIC ${PROPWARE_SOURCES})
 set_target_properties(PropWare_${MODEL} PROPERTIES OUTPUT_NAME PropWare)
 install(TARGETS PropWare_${MODEL}
     DESTINATION PropWare/lib/${MODEL}
