Switch default board type to Activity Board

--- a/Examples/PropWare_FileWriter/CMakeLists.txt
+++ b/Examples/PropWare_FileWriter/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
 find_package(PropWare REQUIRED)
 
-set(BOARD dna)
+set(BOARD activityboard)
 set(MODEL cmm)
 
 project(FileWriter_Demo)
