--- a/Examples/PropWare_Eeprom/CMakeLists.txt
+++ b/Examples/PropWare_Eeprom/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
 find_package(PropWare REQUIRED)
 
-project(PropWareEeprom_Demo)
+project(Eeprom_Demo)
 
-create_simple_executable(${PROJECT_NAME} PropWareEeprom_Demo.cpp)
+create_simple_executable(${PROJECT_NAME} Eeprom_Demo.cpp)
