[Closes #8] Add support for Spin2Cpp via function and add_custom_command

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -34,3 +34,4 @@ add_subdirectory(Simple_FdSerial)
 add_subdirectory(Simple_libadcACpropab)
 add_subdirectory(Simple_MeasureVolts)
 add_subdirectory(Simple_SimpleText)
+add_subdirectory(Spin2Cpp)
