Disable warnings in external projects

--- a/external_libs/CMakeLists.txt
+++ b/external_libs/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Turn off warnings for code that I don't own
+set(WARN_ALL OFF)
+
 ####################################################################
 # Find libpropeller sources
 ####################################################################
