Disable includes for Simple & libpropeller from PropWare sources

--- a/PropWare/models/cmm/CMakeLists.txt
+++ b/PropWare/models/cmm/CMakeLists.txt
@@ -1,6 +1,9 @@
 set(MODEL cmm)
 
-create_library(PropWare_${MODEL} STATIC ${PROPWARE_SOURCES})
+add_library(PropWare_${MODEL} STATIC ${PROPWARE_SOURCES})
+set_compile_flags()
+include_directories(${PROJECT_SOURCE_DIR})
+set_linker(PropWare_${MODEL})
 set_target_properties(PropWare_${MODEL} PROPERTIES OUTPUT_NAME PropWare)
 install(TARGETS PropWare_${MODEL}
     DESTINATION PropWare/lib/${MODEL}
