[#80] Do not download CMake binaries by default; Enable per-OS and per-architecture builds

--- a/CMakeCPackOptions.cmake.in
+++ b/CMakeCPackOptions.cmake.in
@@ -10,7 +10,7 @@ elseif (CPACK_GENERATOR MATCHES "NSIS")
     set(CPACK_COMPONENTS_ALL propware examples win_cmake win_spin2cpp)
 elseif (CPACK_GENERATOR MATCHES "DEB")
     set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE ON)
-    set(CPACK_COMPONENTS_ALL propware examples cmake linux_spin2cpp)
+    set(CPACK_COMPONENTS_ALL propware examples cmake pi2_cmake linux_spin2cpp rpi_spin2cpp)
 elseif (CPACK_GENERATOR MATCHES "RPM")
     set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE ON)
     set(CPACK_COMPONENTS_ALL propware examples cmake linux_spin2cpp)
