[#80] Rename config variables to group together alphabetically

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,10 +34,10 @@ if (DOXYGEN_FOUND)
         WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
 endif ()
 
-option(LINUX_PACKAGE "Create complete package for Linux" OFF)
-option(WIN32_PACKAGE "Create complete package for Windows" OFF)
-option(OSX_PACKAGE "Create complete package for Mac OSX" OFF)
-option(PI2_PACKAGE "Create complete package for Raspberry Pi 2" OFF)
+option(PACKAGE_LINUX "Create complete package for Linux" OFF)
+option(PACKAGE_WIN32 "Create complete package for Windows" OFF)
+option(PACKAGE_OSX "Create complete package for Mac OSX" OFF)
+option(PACKAGE_PI2 "Create complete package for Raspberry Pi 2" OFF)
 
 include(ExternalProject)
 include(./DownloadCMakeBinaries.cmake)
