[Closes #73] Rename MCP3000 -> MCP3xxx

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -13,7 +13,7 @@ add_subdirectory(PropWare_HD44780)
 add_subdirectory(PropWare_I2C)
 add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
-add_subdirectory(PropWare_MCP3000)
+add_subdirectory(PropWare_MCP3xxx)
 add_subdirectory(PropWare_MultiCogBlinky)
 add_subdirectory(PropWare_PCF8591)
 add_subdirectory(PropWare_Ping)
