--- a/PropWare/CMakeLists.txt
+++ b/PropWare/CMakeLists.txt
@@ -17,7 +17,7 @@ set(PROPWARE_SOURCES
     ${CMAKE_CURRENT_LIST_DIR}/i2cbase
     ${CMAKE_CURRENT_LIST_DIR}/l3g
     ${CMAKE_CURRENT_LIST_DIR}/max6675
-    ${CMAKE_CURRENT_LIST_DIR}/mcp3000
+    ${CMAKE_CURRENT_LIST_DIR}/mcp3xxx
     ${CMAKE_CURRENT_LIST_DIR}/motor/stepper
     ${CMAKE_CURRENT_LIST_DIR}/pcf8591
     ${CMAKE_CURRENT_LIST_DIR}/pin
