[#83] UART RX  fixed; UARTTX::puts does not work in COG mode

--- a/Examples/PropWare_UARTTX/CMakeLists.txt
+++ b/Examples/PropWare_UARTTX/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(PropWare REQUIRED)
 
 project(SimplexUART_Demo C CXX ASM)
 
-create_simple_executable(${PROJECT_NAME} SimplexUART_Demo.cpp)
+create_simple_executable(${PROJECT_NAME} UARTTX_Demo.cpp)
