--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -5,7 +5,6 @@ add_subdirectory(GettingStarted)
 add_subdirectory(Hello)
 add_subdirectory(Libpropeller_Pwm32)
 add_subdirectory(PropWare_Blinky)
-add_subdirectory(PropWare_DuplexUART)
 add_subdirectory(PropWare_Eeprom)
 add_subdirectory(PropWare_FileReader)
 add_subdirectory(PropWare_FileWriter)
@@ -20,13 +19,14 @@ add_subdirectory(PropWare_Ping)
 add_subdirectory(PropWare_Queue)
 add_subdirectory(PropWare_Runnable)
 add_subdirectory(PropWare_Scanner)
-add_subdirectory(PropWare_SimplexUART)
 add_subdirectory(PropWare_Simple_Hybrid)
 add_subdirectory(PropWare_SPI)
 add_subdirectory(PropWare_Spin2Dat)
 add_subdirectory(PropWare_Stepper)
 add_subdirectory(PropWare_StringBuilder)
 add_subdirectory(PropWare_SynchronousPrinter)
+add_subdirectory(PropWare_UARTRX)
+add_subdirectory(PropWare_UARTTX)
 add_subdirectory(PropWare_Utility)
 add_subdirectory(PropWare_WatchDog)
 add_subdirectory(PropWare_WS2812)
