[#78] Keypad not working

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(PropWare_FullDuplexSerial)
 add_subdirectory(PropWare_HD44780)
 add_subdirectory(PropWare_I2C)
 add_subdirectory(PropWare_I2CSlave)
+add_subdirectory(PropWare_Keypad)
 add_subdirectory(PropWare_L3G)
 add_subdirectory(PropWare_MAX6675)
 add_subdirectory(PropWare_MAX72xx)
