[#14] Totally busted buffered UART

--- a/PropWare/CMakeLists.txt
+++ b/PropWare/CMakeLists.txt
@@ -35,12 +35,12 @@ set(PROPWARE_SOURCES
     ${CMAKE_CURRENT_LIST_DIR}/serial/i2c/i2cbase.h
     ${CMAKE_CURRENT_LIST_DIR}/serial/spi/spi.h
     ${CMAKE_CURRENT_LIST_DIR}/serial/uart/shareduarttx.h
-    ${CMAKE_CURRENT_LIST_DIR}/serial/uart/uart.cpp
     ${CMAKE_CURRENT_LIST_DIR}/serial/uart/uart.h
     ${CMAKE_CURRENT_LIST_DIR}/serial/uart/uartrx.h
     ${CMAKE_CURRENT_LIST_DIR}/serial/uart/uarttx.h
     ${CMAKE_CURRENT_LIST_DIR}/string/staticstringbuilder.h
     ${CMAKE_CURRENT_LIST_DIR}/string/stringbuilder.h
+    ${CMAKE_CURRENT_LIST_DIR}/utility/charqueue.h
     ${CMAKE_CURRENT_LIST_DIR}/utility/comparator.cpp
     ${CMAKE_CURRENT_LIST_DIR}/utility/comparator.h
     ${CMAKE_CURRENT_LIST_DIR}/utility/queue.h
