--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(Hello)
 add_subdirectory(Libpropeller_Pwm32)
 add_subdirectory(libPropelleruino_Blinky)
 add_subdirectory(PropWare_Blinky)
+add_subdirectory(PropWare_BufferedUARTRX)
 add_subdirectory(PropWare_Eeprom)
 add_subdirectory(PropWare_FileReader)
 add_subdirectory(PropWare_FileWriter)
