[#26] Screen can be calibrated to proper size

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory(PropWare_MCP3xxx)
 add_subdirectory(PropWare_MultiCogBlinky)
 add_subdirectory(PropWare_PCF8591)
 add_subdirectory(PropWare_Ping)
+add_subdirectory(PropWare_PWEdit)
 add_subdirectory(PropWare_Queue)
 add_subdirectory(PropWare_Runnable)
 add_subdirectory(PropWare_Scanner)
