--- a/PropWare/CMakeLists.txt
+++ b/PropWare/CMakeLists.txt
@@ -24,6 +24,7 @@ set(PROPWARE_SOURCES
     ${CMAKE_CURRENT_LIST_DIR}/hmi/output/synchronousprinter.cpp
     ${CMAKE_CURRENT_LIST_DIR}/hmi/output/synchronousprinter.h
     ${CMAKE_CURRENT_LIST_DIR}/hmi/output/ws2812.h
+    ${CMAKE_CURRENT_LIST_DIR}/hmi/pwedit.h
     ${CMAKE_CURRENT_LIST_DIR}/memory/blockstorage.h
     ${CMAKE_CURRENT_LIST_DIR}/memory/eeprom.h
     ${CMAKE_CURRENT_LIST_DIR}/memory/sd.h
