--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(Cogc)
 add_subdirectory(GettingStarted)
 add_subdirectory(Hello)
 add_subdirectory(Libpropeller_Pwm32)
+add_subdirectory(libPropelleruino_Blinky)
 add_subdirectory(PropWare_Blinky)
 add_subdirectory(PropWare_Eeprom)
 add_subdirectory(PropWare_FileReader)
