--- a/external_libs/xmmc/CMakeLists.txt
+++ b/external_libs/xmmc/CMakeLists.txt
@@ -6,10 +6,11 @@ set_source_files_properties("${PROJECT_SOURCE_DIR}/propsideworkspace/Learn/Simpl
 
 create_library(Libpropeller_${MODEL} STATIC ${LIBPROPELLER_OBJECTS})
 create_library(Simple_${MODEL} STATIC ${SIMPLE_OBJECTS})
+create_library(LibPropelleruino_${MODEL} STATIC ${LIBPROPELLERUINO_OBJECTS})
 set_target_properties(Libpropeller_${MODEL} PROPERTIES OUTPUT_NAME Libpropeller)
 set_target_properties(Simple_${MODEL} PROPERTIES OUTPUT_NAME Simple)
-install(TARGETS Libpropeller_${MODEL} Simple_${MODEL}
+set_target_properties(LibPropelleruino_${MODEL} PROPERTIES OUTPUT_NAME LibPropelleruino)
+install(TARGETS Libpropeller_${MODEL} Simple_${MODEL} LibPropelleruino_${MODEL}
     DESTINATION PropWare/lib/${MODEL}
     COMPONENT propware
     EXPORT PropWare-targets)
-
