--- a/docs/Download.md.in
+++ b/docs/Download.md.in
@@ -47,7 +47,7 @@ Linux (x86-64) - Debian/Ubuntu/Mint/etc
 Linux (x86-64) - RedHat/Fedora/CentOS/etc
 --------------------------------
 1. Download the [`rpm` package file][5].
-2. Use `rpm` to install the file with: `sudo rpm -i PropWare-@VERSION@-Generic.rpm`. If `cmake` is already installed,
+2. Use `rpm` to install the file with: `sudo rpm -i propware-@VERSION@-1.x86_64.rpm`. If `cmake` is already installed,
    remove it with `sudo rpm -e cmake`.
 3. `make` is the recommended build tool to use with %PropWare. If it is not already installed, install it with
    `sudo yum install make`.
@@ -59,7 +59,7 @@ following packages. The packages must be built manually and will therefore not b
 Windows, Linux x86-64, or Mac OSX packages.
 
 1. Download the [`deb` package file][6].
-2. Use `dpkg` to install the file with: `sudo dpkg -i PropWare-@VERSION@-Generic.deb`. If `cmake` is already installed,
+2. Use `dpkg` to install the file with: `sudo dpkg -i propware_@VERSION@-1_amd64.deb`. If `cmake` is already installed,
    remove it with `sudo dpkg -r cmake`.
 3. `make` is the recommended build tool to use with %PropWare. If it is not already installed, install it with
    `sudo apt-get install make`.
@@ -111,6 +111,6 @@ sudo rm -rf /Applications/PropWare.bak
 [1]: http://david.zemon.name:8111/repository/download/@TEAMCITY_BUILD_ID@/.lastSuccessful/PropWare-@VERSION@-Generic-propware.zip?guest=1
 [2]: http://david.zemon.name:8111/repository/download/@TEAMCITY_BUILD_ID@/.lastSuccessful/PropWare-@VERSION@-Generic.exe?guest=1
 [3]: http://www.computerhope.com/issues/ch000549.htm
-[4]: http://david.zemon.name:8111/repository/download/@TEAMCITY_BUILD_ID@/.lastSuccessful/PropWare-@VERSION@-Generic.deb?guest=1
-[5]: http://david.zemon.name:8111/repository/download/@TEAMCITY_BUILD_ID@/.lastSuccessful/PropWare-@VERSION@-Generic.rpm?guest=1
+[4]: http://david.zemon.name:8111/repository/download/@TEAMCITY_BUILD_ID@/.lastSuccessful/propware_@VERSION@-1_amd64.deb?guest=1
+[5]: http://david.zemon.name:8111/repository/download/@TEAMCITY_BUILD_ID@/.lastSuccessful/propware-@VERSION@-1.x86_64.rpm?guest=1
 [6]: http://david.zemon.name/downloads/PropWare-2.1.0-Generic.deb
