[#14] Clean up some comments; Minor adjustments to performance
Significant performance improvement will only come from a total restructure. Use of independent UART,
buffer, and queue objects is going to require more than one stop bit at 230,400 baud.

--- a/Examples/PropWare_BufferedUART/CMakeLists.txt
+++ b/Examples/PropWare_BufferedUART/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
 find_package(PropWare REQUIRED)
 
-project(BufferedUARTRX_Demo CXX COGCXX)
+project(BufferedUART_Demo CXX COGCXX)
 
 create_simple_executable(${PROJECT_NAME}
     BufferedUART_Demo.cpp
