[#14] Add PropWare-ified version of FullDuplexSerial

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(PropWare_BufferedUART)
 add_subdirectory(PropWare_Eeprom)
 add_subdirectory(PropWare_FileReader)
 add_subdirectory(PropWare_FileWriter)
+add_subdirectory(PropWare_FullDuplexSerial)
 add_subdirectory(PropWare_HD44780)
 add_subdirectory(PropWare_I2C)
 add_subdirectory(PropWare_L3G)
